# mdstats

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  config.toml
include/: prog.hpp  utils.hpp
module/statstable/: CMakeLists.txt  statstable.cpp  statstable.hpp
module/statstable/v1/: CMakeLists.txt  statstable.cpp
module/statstable/v2/: CMakeLists.txt  eval.hpp  parser_.cpp  statstable.cpp
module/toast_notify/: Cargo.toml
module/toast_notify/binding/: toast_notify.h
module/toast_notify/src/: lib.rs
resource/csv/: data.csv
resource/template/: templateconfig.toml
src/: databasemodel.cpp  databasemodel.hpp  delegate.cpp  delegate.hpp  evil.h  floatwindow.cpp  floatwindow.hpp  main.cpp  mainwindow.cpp  mainwindow.h  matcher.cpp  matcher.hpp  opencv_matcher.hpp  prog.cpp  prog.hpp  prog_config.hpp  screenshot.hpp  toml_reader.hpp  utils.cpp  utils.hpp
src/launcher/: CMakeLists.txt  launcher.cpp
src/perf/: CMakeLists.txt  perf.cpp
